# near-reputation

./: Cargo.toml  README.md
scripts/: deploy.sh  dev-deploy.sh  dev-init.sh  dev-migrate.sh  ft_balance_of.sh  ft_metadata.sh  ft_storage_balance_of.sh  ft_storage_minimum_balance.sh  ft_total_supply.sh  ft_transfer.sh  rep_vote.sh  rep_vote_of.sh  storage_balance_bounds.sh  storage_balance_of.sh  storage_deposit.sh  storage_withdraw.sh  test.sh
scripts/neardev/: dev-account  dev-account.env
src/: event.rs  lib.rs
src/ft/: mod.rs  utils.rs
src/ft/base/: core_impl.rs  events.rs  macros.rs  mod.rs  storage_impl.rs
src/ft/vote/: events.rs  internal.rs  macros.rs  mod.rs  vote.rs  vote_impl.rs
